--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "latest",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-tweet-embed": "^1.2.2"
+    "react-tweet-embed": "^1.2.2",
+    "twit": "^2.2.11"
   }
 }
